--- a/pipelines/release-pipeline.yml
+++ b/pipelines/release-pipeline.yml
@@ -2,9 +2,9 @@ trigger: none
 name: $(Date:yyyyMMdd).$(Rev:r)
 resources:
   pipelines:
-    - pipeline: "apis-of-dotnet"
+    - pipeline: "apis-of-dotnet-build"
       project: "OnlineServices"
-      source: "ASP-IIS-dotnet/builds/apis-of-dotnet-build"
+      source: "asp-iis-dotnet/builds/apis-of-dotnet-build"
       trigger:
         branches:
           include:
@@ -22,11 +22,49 @@ extends:
       image: 1ESPT-Ubuntu22.04
       os: linux
     stages:
-      # - stage: DR
-      #   displayName: Deploy to DR
+      - stage: Dev
+        displayName: Deploy to Dev
+        jobs:
+          - job: Job_1
+            displayName: Run on agent
+            condition: succeeded()
+            timeoutInMinutes: 0
+            templateContext:
+              type: releaseJob
+              isProduction: false
+              inputs:
+                - input: pipelineArtifact
+                  pipeline: "apis-of-dotnet-build"
+                  artifactName: "apis-of-dotnet-drop"
+                  targetPath: "$(Pipeline.Workspace)/apis-of-dotnet-drop"
+            steps:
+              - task: AzureRmWebAppDeployment@5
+                displayName: Deploy Web App
+                inputs:
+                  ConnectedServiceName: "$(AzureDevSubscriptionConnection)"
+                  WebAppName: apisofdotnet-dev
+                  Package: $(Pipeline.Workspace)/apis-of-dotnet-drop
+      # - stage: Production
+      #   displayName: Deploy to Production
+      #   # dependsOn: DR
       #   jobs:
+      #     - job: PreDeploymentApprovalJob
+      #       displayName: Pre-Deployment Approval
+      #       condition: succeeded()
+      #       timeoutInMinutes: 43200
+      #       pool: server
+      #       steps:
+      #         - task: ManualValidation@1
+      #           inputs:
+      #             notifyUsers: |-
+      #               Chris.Sfanos@microsoft.com,
+      #               v-danzhu1@microsoft.com
+      #             approvers: |-
+      #               Chris.Sfanos@microsoft.com,
+      #               v-danzhu1@microsoft.com
       #     - job: Job_1
       #       displayName: Run on agent
+      #       dependsOn: PreDeploymentApprovalJob
       #       condition: succeeded()
       #       timeoutInMinutes: 0
       #       templateContext:
@@ -38,51 +76,13 @@ extends:
       #             artifactName: "apis-of-dotnet-drop"
       #             targetPath: "$(Pipeline.Workspace)/apis-of-dotnet-drop"
       #       steps:
-      #         - task: AzureRmWebAppDeployment@4
-      #           displayName: Deploy to DR
+      #         - task: AzureRmWebAppDeployment@5
+      #           displayName: Deploy to Production
       #           inputs:
-      #             ConnectedServiceName: dotnetwebsite-azure
-      #             WebAppName: apisofdotnet-dr
-      #             Package: $(Pipeline.Workspace)/apis-of-dotnet-drop
-      - stage: Production
-        displayName: Deploy to Production
-        # dependsOn: DR
-        jobs:
-          - job: PreDeploymentApprovalJob
-            displayName: Pre-Deployment Approval
-            condition: succeeded()
-            timeoutInMinutes: 43200
-            pool: server
-            steps:
-              - task: ManualValidation@1
-                inputs:
-                  notifyUsers: |-
-                    Chris.Sfanos@microsoft.com,
-                    v-danzhu1@microsoft.com
-                  approvers: |-
-                    Chris.Sfanos@microsoft.com,
-                    v-danzhu1@microsoft.com
-          - job: Job_1
-            displayName: Run on agent
-            dependsOn: PreDeploymentApprovalJob
-            condition: succeeded()
-            timeoutInMinutes: 0
-            templateContext:
-              type: releaseJob
-              isProduction: true
-              inputs:
-                - input: pipelineArtifact
-                  pipeline: "apis-of-dotnet"
-                  artifactName: "apis-of-dotnet-drop"
-                  targetPath: "$(Pipeline.Workspace)/apis-of-dotnet-drop"
-            steps:
-              - task: AzureRmWebAppDeployment@4
-                displayName: Deploy to Production
-                inputs:
-                  ConnectionType: "AzureRM"
-                  appType: webAppLinux
-                  azureSubscription: dotnetwebsite-azure
-                  WebAppName: apisofdotnet
-                  packageForLinux: $(Pipeline.Workspace)/apis-of-dotnet-drop
-                  enableCustomDeployment: true
-                  DeploymentType: "zipDeploy"
+      #             ConnectionType: "AzureRM"
+      #             appType: webAppLinux
+      #             azureSubscription: dotnetwebsite-azure
+      #             WebAppName: apisofdotnet
+      #             packageForLinux: $(Pipeline.Workspace)/apis-of-dotnet-drop
+      #             enableCustomDeployment: true
+      #             DeploymentType: "zipDeploy"
