--- a/src/NetUpgradePlannerTelemetry/NetUpgradePlannerTelemetry.csproj
+++ b/src/NetUpgradePlannerTelemetry/NetUpgradePlannerTelemetry.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
