--- a/src/Terrajobst.ApiCatalog.ActionsRunner/Terrajobst.ApiCatalog.ActionsRunner.csproj
+++ b/src/Terrajobst.ApiCatalog.ActionsRunner/Terrajobst.ApiCatalog.ActionsRunner.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Identity" />
       <PackageReference Include="Azure.Storage.Blobs" />
       <PackageReference Include="Humanizer.Core" />
       <PackageReference Include="Microsoft.Extensions.Hosting" />
