Add nuget authenticate step for private upstream

--- a/pipelines/build-packages.yml
+++ b/pipelines/build-packages.yml
@@ -32,6 +32,8 @@ extends:
                 displayName: Use .NET 8 SDK
                 inputs:
                   version: 8.x
+              - task: NuGetAuthenticate@1
+                displayName: "NuGet Authenticate"
               - script: |
                   cd src/
                   dotnet test
