--- a/pipelines/release-telemetry.yml
+++ b/pipelines/release-telemetry.yml
@@ -5,7 +5,7 @@ resources:
   pipelines:
     - pipeline: "apis-of-dotnet-telemetry-build"
       project: "OnlineServices"
-      source: 'asp-iis-dotnet\builds\apis-of-dotnet-telemetry-build'
+      source: 'ASP-IIS-dotnet\builds\apis-of-dotnet-telemetry-build'
       trigger:
         branches:
           include:
