Update gen catalog workflow error

--- a/src/apisof.net/appsettings.json
+++ b/src/apisof.net/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "System.Net.Http.HttpClient.SourceResolverService": "Warning",
-      "System.Net.Http.HttpClient.DocumentationResolverService": "Warning",
+      "System.Net.Http.HttpClient.DocumentationResolverService": "Warning"
     }
   },
   "AllowedHosts": "*"
