--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,16 +2,6 @@
 <configuration>
     <packageSources>
         <clear />
-        <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-        <add key="dotnet-eng" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-eng/nuget/v3/index.json" />
+        <add key="dotnetlegacy" value="https://devdiv.pkgs.visualstudio.com/OnlineServices/_packaging/dotnetlegacy/nuget/v3/index.json" />
     </packageSources>
-
-    <packageSourceMapping>
-        <packageSource key="nuget.org">
-            <package pattern="*" />
-        </packageSource>
-        <packageSource key="dotnet-eng">
-            <package pattern="Microsoft.Cci.Extensions" />
-        </packageSource>
-    </packageSourceMapping>
 </configuration>
