--- a/pipelines/release-pipeline.yml
+++ b/pipelines/release-pipeline.yml
@@ -74,7 +74,7 @@ extends:
               isProduction: true
               inputs:
                 - input: pipelineArtifact
-                  pipeline: "apis-of-dotnet"
+                  pipeline: "apis-of-dotnet-build"
                   artifactName: "apis-of-dotnet-drop"
                   targetPath: "$(Pipeline.Workspace)/apis-of-dotnet-drop"
             steps:
