--- a/pipelines/build-telemetry.yml
+++ b/pipelines/build-telemetry.yml
@@ -1,21 +1,14 @@
----
-variables:
-  - name: Codeql.Enabled
-    value: true
 trigger:
   branches:
     include:
-      - "*"
+      - main
   paths:
     include:
-      - pipelines/**
-      - src/apisof.net/**
-      - src/Terrajobst.ApiCatalog/**
-    exclude:
-      - .gitignore
-      - .github/*
-  batch: true
+      - pipelines/build-telemetry.yml
+      - src/NetUpgradePlannerTelemetry/**
+
 name: $(date:yyyyMMdd)$(rev:.r)
+
 resources:
   repositories:
     - repository: self
@@ -25,6 +18,7 @@ resources:
       type: git
       name: 1ESPipelineTemplates/1ESPipelineTemplates
       ref: refs/tags/release
+
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
@@ -38,40 +32,35 @@ extends:
       image: 1ESPT-Ubuntu22.04
       os: linux
     stages:
-      - stage: stage
+      - stage: Build
         jobs:
-          - job: Phase_1
-            displayName: Agent job 1
-            timeoutInMinutes: 0
+          - job: Build
+            displayName: Build Function
             templateContext:
               outputs:
                 - output: pipelineArtifact
                   displayName: "Publish Artifact"
-                  targetPath: $(build.artifactstagingdirectory)
-                  artifactName: apis-of-dotnet-drop
+                  targetPath: $(Build.ArtifactStagingDirectory)/telemetry.zip
+                  artifactName: telemetry-drop
             steps:
               - checkout: self
               - task: UseDotNet@2
                 displayName: Use .NET 8 SDK
                 inputs:
                   version: 8.x
-                  includePreviewVersions: true
               - task: NuGetAuthenticate@1
                 displayName: "NuGet Authenticate"
               - script: |
-                  cd src/apisof.net
-                  dotnet clean
-                  dotnet publish apisof.net.csproj -o "$(build.artifactstagingdirectory)/publish" /p:SourceRevisionId=$(Build.SourceVersion)
-                displayName: "Publish Web Application"
+                  dotnet publish src/NetUpgradePlannerTelemetry/NetUpgradePlannerTelemetry.csproj -o "$(Build.ArtifactStagingDirectory)/publish" /p:SourceRevisionId=$(Build.SourceVersion)
+                displayName: Publish Function
               - task: ArchiveFiles@2
-                displayName: "Archive published files to site.zip"
+                displayName: "Archive published files"
                 inputs:
-                  rootFolderOrFile: "$(build.artifactstagingdirectory)/publish"
+                  rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/publish"
                   includeRootFolder: false
                   archiveType: "zip"
-                  archiveFile: "$(build.artifactstagingdirectory)/site.zip"
+                  archiveFile: "$(Build.ArtifactStagingDirectory)/telemetry.zip"
                   replaceExistingArchive: true
               - script: |
-                  rm -rf "$(build.artifactstagingdirectory)/publish"
-                  echo "Deleted publish folder"
+                  rm -rf "$(Build.ArtifactStagingDirectory)/publish"
                 displayName: "Clean up publish folder"
