--- a/pipelines/templates/gen-usage-nuget.yml
+++ b/pipelines/templates/gen-usage-nuget.yml
@@ -16,5 +16,5 @@ steps:
       dotnet run -- crawl --configuration $(ReleaseConfiguration)
     displayName: "Generate NuGet usage"
     env:
-      AzureStorageConnectionString: $(AzureStorageServiceUrl)
+      AzureStorageServiceUrl: $(AzureStorageServiceUrl)
       ApisOfDotNetWebHookSecret: $(ApisOfDotNetWebHookSecret)
