--- a/pipelines/templates/gen-usage-planner.yml
+++ b/pipelines/templates/gen-usage-planner.yml
@@ -9,14 +9,14 @@ steps:
   - task: NuGetAuthenticate@1
     displayName: "NuGet Authenticate"
   - script: |
-      dotnet build "$(Build.SourcesDirectory)/src/GenUsagePlanner/GenUsagePlanner.csproj" --configuration Release
+      dotnet build "$(Build.SourcesDirectory)/src/GenUsagePlanner/GenUsagePlanner.csproj"
     displayName: "Build GenUsagePlanner"
   - task: DotNetCoreCLI@2
     displayName: "Run GenUsagePlanner"
     inputs:
       command: 'run'
       projects: '$(Build.SourcesDirectory)/src/GenUsagePlanner'
-      arguments: '--configuration $(ReleaseConfiguration)'
+      arguments: '--configuration $(BuildConfiguration)'
     env:
       AzureStorageServiceUrl: $(AzureStorageServiceUrl)
       ApisOfDotNetWebHookSecret: $(ApisOfDotNetWebHookSecret)
