--- a/pipelines/gen-usage-pipeline.yml
+++ b/pipelines/gen-usage-pipeline.yml
@@ -4,7 +4,7 @@ trigger: none
 name: $(date:yyyyMMdd)$(rev:.r)
 variables:
   - name: BuildConfiguration
-    value: Release
+    value: Debug
 resources:
   repositories:
     - repository: self
@@ -33,8 +33,8 @@ extends:
         os: windows
     pool:
       name: AzurePipelines-EO
-      image: 1ESPT-Ubuntu22.04
-      os: linux
+      image: 1ESPT-Windows2022
+      os: windows
     stages:
       - stage: GenerateUsage
         jobs:
