--- a/pipelines/gen-usage-pipeline.yml
+++ b/pipelines/gen-usage-pipeline.yml
@@ -73,6 +73,18 @@ extends:
                   scriptType: "bash"
                   scriptLocation: "inlineScript"
                   inlineScript: |
+                    set -e
+
+                    echo "== az account show =="
+                    az account show
+
+                    echo "== test storage access =="
+                    az storage blob show \
+                      --account-name apisofdotnetdev \
+                      --container-name catalog \
+                      --name apicatalog.dat \
+                      --auth-mode login
+
                      cd "$(Build.SourcesDirectory)/src/GenUsage"
                      dotnet run --configuration $(BuildConfiguration)
                 env:
