--- a/pipelines/gen-usage-pipeline.yml
+++ b/pipelines/gen-usage-pipeline.yml
@@ -84,9 +84,9 @@ extends:
                       --container-name catalog \
                       --name apicatalog.dat \
                       --auth-mode login
-
-                     cd "$(Build.SourcesDirectory)/src/GenUsage"
-                     dotnet run --configuration $(BuildConfiguration)
+                    echo "Storage url: $AzureStorageServiceUrl"
+                    cd "$(Build.SourcesDirectory)/src/GenUsage"
+                    dotnet run --configuration $(BuildConfiguration)
                 env:
                   AzureStorageServiceUrl: $(AzureStorageServiceUrl)
                   ApisOfDotNetWebHookSecret: $(ApisOfDotNetWebHookSecret)
